<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_team_string" />

    <EditText
        android:id="@+id/firstTeamEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionNext"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/second_team_string" />

    <EditText
        android:id="@+id/secondTeamEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionDone"
        android:ems="10" />
    
    <TextView
        android:id="@+id/validationWarningText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_validation_string"
        android:visibility="invisible"
        android:textColor="#ff0000" />

</LinearLayout>